[package]
name = "starlight_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
bumpalo = "3.14.0"
mcts = "0.3.0"
once_cell = "1.19.0"
varlen = { version = "0.1.2", features = ["macro"] }